-- ============================================================================
-- DROP AND CREATE TABLES - Clean slate + Normalized schema
-- ============================================================================
-- Generated by rulebook-to-postgres tool
-- Total Tables: 8
-- Total Raw Fields: 41
-- ============================================================================

-- ============================================================================
-- DROP SPECIFIC OBJECTS - Only dropping objects that will be recreated
-- ============================================================================

-- Drop functions (order: first, because views depend on them)
DROP FUNCTION IF EXISTS calc_erb_versions_pk(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_shapes_how_many_sides(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_shapes_hypotenuse_length_squared(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_shapes_is_rectangle(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_shapes_is_right_triangle(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_shapes_is_triangle(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_shapes_max_angle(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_shapes_non_hypotenuse_sides_squared(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_shapes_pythagorean_theorem_holds(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_shapes_sum_of_internal_angles(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_hypotenuse_length_squared(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_is_hypotenuse(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_is_rectangle(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_is_right_triangle(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_is_triangle(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_length_squared(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_name(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_next_angle(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_next_label(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_next_length(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_non_hypotenuse_length_squared(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_previous_angle(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_previous_label(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_previous_side_length(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_pythagorean_theorem_holds(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_shape_sides(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_sides_status_of_theorem(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_widgets_email_address_from_appuser(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_widgets_name_from_appuser(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_widgets_role_from_appuser(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_app_users_email_address(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_app_users_is_active(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_app_users_name(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_app_users_notes(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_app_users_role(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_shapes_name(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_sides_angle(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_sides_label(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_sides_length(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_widgets_color(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_widgets_name(TEXT) CASCADE;

-- Drop views (order: second, because they depend on tables)
DROP VIEW IF EXISTS vw_app_users CASCADE;
DROP VIEW IF EXISTS vw_erb_customizations CASCADE;
DROP VIEW IF EXISTS vw_erb_versions CASCADE;
DROP VIEW IF EXISTS vw_magic_link_integration CASCADE;
DROP VIEW IF EXISTS vw_name CASCADE;
DROP VIEW IF EXISTS vw_shapes CASCADE;
DROP VIEW IF EXISTS vw_sides CASCADE;
DROP VIEW IF EXISTS vw_widgets CASCADE;

-- Drop tables (order: last, after dependent objects are removed)
DROP TABLE IF EXISTS app_users CASCADE;
DROP TABLE IF EXISTS erb_customizations CASCADE;
DROP TABLE IF EXISTS erb_versions CASCADE;
DROP TABLE IF EXISTS magic_link_integration CASCADE;
DROP TABLE IF EXISTS name CASCADE;
DROP TABLE IF EXISTS shapes CASCADE;
DROP TABLE IF EXISTS sides CASCADE;
DROP TABLE IF EXISTS widgets CASCADE;

-- ============================================================================
-- CREATE TABLES - Normalized data only (no calculated fields)
-- ============================================================================

CREATE TABLE name (
);

CREATE TABLE app_users (
  app_user_id                         TEXT                 PRIMARY KEY,
  name                                TEXT                ,
  email_address                       TEXT                ,
  role                                TEXT                ,
  is_active                           BOOLEAN             ,
  notes                               TEXT                
);
COMMENT ON TABLE app_users IS 'Table: AppUsers';

CREATE TABLE shapes (
  shape_id                            TEXT                 PRIMARY KEY,
  name                                TEXT                
);
COMMENT ON TABLE shapes IS 'Table: Shapes';

CREATE TABLE sides (
  side_id                             TEXT                 PRIMARY KEY,
  label                               TEXT                ,
  length                              INTEGER             ,
  angle                               INTEGER             ,
  previous_side                       TEXT                ,
  next_side                           TEXT                ,
  shape                               TEXT                
);
COMMENT ON TABLE sides IS 'Table: Sides';
COMMENT ON COLUMN sides.label IS 'Label for this edge';
COMMENT ON COLUMN sides.length IS 'Length';
COMMENT ON COLUMN sides.angle IS 'Internal angles for the shapes';
COMMENT ON COLUMN sides.previous_side IS 'Previous Edge';
COMMENT ON COLUMN sides.next_side IS 'Next Edge';
COMMENT ON COLUMN sides.shape IS 'Shape';

CREATE TABLE widgets (
  widget_id                           TEXT                 PRIMARY KEY,
  name                                TEXT                ,
  appuser                             TEXT                ,
  color                               TEXT                
);
COMMENT ON TABLE widgets IS 'Table: Widgets';

CREATE TABLE erb_versions (
  erb_version_id                      TEXT                 PRIMARY KEY,
  base_id                             TEXT                ,
  name                                TEXT                ,
  message                             TEXT                ,
  notes                               TEXT                ,
  commit_date                         TIMESTAMPTZ         ,
  is_published                        BOOLEAN             
);
COMMENT ON TABLE erb_versions IS 'Table: ERBVersions';

CREATE TABLE erb_customizations (
  erb_customization_id                TEXT                 PRIMARY KEY,
  name                                TEXT                ,
  title                               TEXT                ,
  sql_code                            TEXT                ,
  sql_target                          TEXT                ,
  customization_type                  TEXT                
);
COMMENT ON TABLE erb_customizations IS 'Table: ERBCustomizations';

CREATE TABLE magic_link_integration (
  magic_link_integration_id           TEXT                 PRIMARY KEY,
  name                                TEXT                ,
  enabled                             BOOLEAN             ,
  tenant_id                           TEXT                ,
  public_key_pem                      TEXT                ,
  user_table_name                     TEXT                ,
  email_field                         TEXT                ,
  role_field                          TEXT                ,
  is_active_field                     TEXT                ,
  user_id_field                       TEXT                ,
  allowed_algorithms                  TEXT                ,
  require_tenant_binding              BOOLEAN             ,
  use_email_dag_pattern               BOOLEAN             
);
COMMENT ON TABLE magic_link_integration IS 'Table: MagicLinkIntegration';

